force-app/main/default/objects/Account/fields/mem__c.field-meta.xml
<CustomField>
    <fullName>mem__c</fullName>
    <label>mem</label>
    <length>23</length>
    <type>Text</type>
</CustomField>