force-app/main/default/objects/Account/fields/Membership_No__c.field-meta.xml
<CustomField>
    <fullName>Membership_No__c</fullName>
    <label>Membership No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>