force-app/main/default/objects/Account/fields/SFDC_TEST_Field_1__c.field-meta.xml
<CustomField>
    <fullName>SFDC_TEST_Field_1__c</fullName>
    <description>Need to deploy to dev2 and then backout</description>
    <label>SFDC_Test Field 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>