force-app/main/default/objects/Account/fields/Taxi__c.field-meta.xml
<CustomField>
    <fullName>Taxi__c</fullName>
    <label>Taxi</label>
    <length>25</length>
    <type>Text</type>
</CustomField>