force-app/main/default/objects/Account/fields/XYZ_Invoice__c.field-meta.xml
<CustomField>
    <fullName>XYZ_Invoice__c</fullName>
    <label>XYZ_Invoice</label>
    <length>25</length>
    <type>Text</type>
</CustomField>